// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser parses large json result with vulnerable extensions successfully 1`] = `
Array [
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-026",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-026",
      "location": "http://localhost:80",
      "subcomponent": "Query Generator & Query View (ext:lowlevel, ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.29 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Insecure Deserialization found",
    "hostname": "localhost",
    "name": "Insecure Deserialization",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-025",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-025",
      "location": "http://localhost:80",
      "subcomponent": "Query Generator (ext:lowlevel)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.29 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type SQL Injection found",
    "hostname": "localhost",
    "name": "SQL Injection",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-024",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-024",
      "location": "http://localhost:80",
      "subcomponent": "Extension Manager (ext:extensionmanger)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.29 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Directory Traversal found",
    "hostname": "localhost",
    "name": "Directory Traversal",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-023",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-023",
      "location": "http://localhost:80",
      "subcomponent": "Filelist Module (ext:filelist)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.29 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-022",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-022",
      "location": "http://localhost:80",
      "subcomponent": "Link Handling (ext:core, ext:frontend)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.29 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-021",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-021",
      "location": "http://localhost:80",
      "subcomponent": "Form Framework (ext:form)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.29 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-020",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-020",
      "location": "http://localhost:80",
      "subcomponent": "Backend & Core API (ext:backend, ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.26 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Insecure Deserialization found",
    "hostname": "localhost",
    "name": "Insecure Deserialization",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-019",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-019",
      "location": "http://localhost:80",
      "subcomponent": "Backend API (ext:backend)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.26 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Arbitrary Code Execution, Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Arbitrary Code Execution, Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-018",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-018",
      "location": "http://localhost:80",
      "subcomponent": "Frontend Session Handling (ext:frontend)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.26 - 8.5.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Security Misconfiguration found",
    "hostname": "localhost",
    "name": "Security Misconfiguration",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-015",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-015",
      "location": "http://localhost:80",
      "subcomponent": "Link Handling (ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.26 - 8.3.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-014",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-014",
      "location": "http://localhost:80",
      "subcomponent": "Backend User Interface (ext:backend)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.26 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Information Disclosure found",
    "hostname": "localhost",
    "name": "Information Disclosure",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-013",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-013",
      "location": "http://localhost:80",
      "subcomponent": "Fluid Engine (package typo3fluid/fluid)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.24 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-012",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-012",
      "location": "http://localhost:80",
      "subcomponent": "Image Processing via ImageMagick (ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.24 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Arbitrary Code Execution found",
    "hostname": "localhost",
    "name": "Arbitrary Code Execution",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-011",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-011",
      "location": "http://localhost:80",
      "subcomponent": "User Session Handling (ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.24 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Security Misconfiguration found",
    "hostname": "localhost",
    "name": "Security Misconfiguration",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-008",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-008",
      "location": "http://localhost:80",
      "subcomponent": "File List (ext:filelist)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.22 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Arbitrary Code Execution found",
    "hostname": "localhost",
    "name": "Arbitrary Code Execution",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-007",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-007",
      "location": "http://localhost:80",
      "subcomponent": "Form Framework (ext:form)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.22 - 8.5.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-006",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-006",
      "location": "http://localhost:80",
      "subcomponent": "3rd party library Bootstrap CSS toolkit",
      "typo3_version": "8.7",
      "versions_affected": "8.7.22 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-005",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-005",
      "location": "http://localhost:80",
      "subcomponent": "Fluid (ext:fluid)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.22 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-003",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-003",
      "location": "http://localhost:80",
      "subcomponent": "Localization Handling",
      "typo3_version": "8.7",
      "versions_affected": "8.7.22 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Broken Access Control found",
    "hostname": "localhost",
    "name": "Broken Access Control",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-002",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-002",
      "location": "http://localhost:80",
      "subcomponent": "Backend User Account Model (ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.22 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Security Misconfiguration found",
    "hostname": "localhost",
    "name": "Security Misconfiguration",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-001",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-001",
      "location": "http://localhost:80",
      "subcomponent": "RequireJS package configuration",
      "typo3_version": "8.7",
      "versions_affected": "8.7.22 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Information Disclosure found",
    "hostname": "localhost",
    "name": "Information Disclosure",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-012",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-012",
      "location": "http://localhost:80",
      "subcomponent": "Frontend Session Handling",
      "typo3_version": "8.7",
      "versions_affected": "8.7.20 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Denial of Service found",
    "hostname": "localhost",
    "name": "Denial of Service",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-011",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-011",
      "location": "http://localhost:80",
      "subcomponent": "Online media asset handling",
      "typo3_version": "8.7",
      "versions_affected": "8.7.20 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Denial of Service found",
    "hostname": "localhost",
    "name": "Denial of Service",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-010",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-010",
      "location": "http://localhost:80",
      "subcomponent": "Install Tool",
      "typo3_version": "8.7",
      "versions_affected": "8.7.20 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Information Disclosure found",
    "hostname": "localhost",
    "name": "Information Disclosure",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-009",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-009",
      "location": "http://localhost:80",
      "subcomponent": "Install Tool Session Handling",
      "typo3_version": "8.7",
      "versions_affected": "8.7.20 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Security Misconfiguration found",
    "hostname": "localhost",
    "name": "Security Misconfiguration",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-008",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-008",
      "location": "http://localhost:80",
      "subcomponent": "Frontend user login",
      "typo3_version": "8.7",
      "versions_affected": "8.7.20 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-007",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-007",
      "location": "http://localhost:80",
      "subcomponent": "Backend modal component",
      "typo3_version": "8.7",
      "versions_affected": "8.7.20 - 8.5.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-006",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-006",
      "location": "http://localhost:80",
      "subcomponent": "Online media asset rendering",
      "typo3_version": "8.7",
      "versions_affected": "8.7.20 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-005",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-005",
      "location": "http://localhost:80",
      "subcomponent": "3rd party JavaScript library CKEditor",
      "typo3_version": "8.7",
      "versions_affected": "8.7.20 - 8.5.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-004",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-004",
      "location": "http://localhost:80",
      "subcomponent": "Form Framework (ext:form)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.16 - 8.5.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Insecure Deserialization found",
    "hostname": "localhost",
    "name": "Insecure Deserialization",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-003",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-003",
      "location": "http://localhost:80",
      "subcomponent": "Form Framework (ext:form)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.16 - 8.5.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Privilege Escalation & SQL Injection found",
    "hostname": "localhost",
    "name": "Privilege Escalation & SQL Injection",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-002",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-002",
      "location": "http://localhost:80",
      "subcomponent": "TYPO3 CMS",
      "typo3_version": "8.7",
      "versions_affected": "8.7.16 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Insecure Deserialization & Arbitrary Code Execution found",
    "hostname": "localhost",
    "name": "Insecure Deserialization & Arbitrary Code Execution",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-001",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-001",
      "location": "http://localhost:80",
      "subcomponent": "Salted Passwords (ext:saltedpasswords)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.16 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Authentication Bypass found",
    "hostname": "localhost",
    "name": "Authentication Bypass",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2017-007",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2017-007",
      "location": "http://localhost:80",
      "subcomponent": "TYPO3 CMS",
      "typo3_version": "8.7",
      "versions_affected": "8.7.4 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Arbitrary Code Execution found",
    "hostname": "localhost",
    "name": "Arbitrary Code Execution",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2017-005",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2017-005",
      "location": "http://localhost:80",
      "subcomponent": "TYPO3 CMS",
      "typo3_version": "8.7",
      "versions_affected": "8.7.4 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Information Disclosure found",
    "hostname": "localhost",
    "name": "Information Disclosure",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2017-006",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2017-006",
      "location": "http://localhost:80",
      "subcomponent": "TYPO3 CMS",
      "typo3_version": "8.7",
      "versions_affected": "8.7.4 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Information Disclosure found",
    "hostname": "localhost",
    "name": "Information Disclosure",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2017-004",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2017-004",
      "location": "http://localhost:80",
      "subcomponent": "TYPO3 CMS",
      "typo3_version": "8.7",
      "versions_affected": "8.7.4 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2020-011",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2020-011",
      "location": "http://localhost:80",
      "subcomponent": "Session Storage (ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.37 - 8.7.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Sensitive Data Exposure found",
    "hostname": "localhost",
    "name": "Sensitive Data Exposure",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2020-010",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2020-010",
      "location": "http://localhost:80",
      "subcomponent": "Fluid (ext:fluid)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.37 - 8.7.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2020-009",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2020-009",
      "location": "http://localhost:80",
      "subcomponent": "Fluid Engine (package typo3fluid/fluid)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.37 - 8.7.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-008",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-008",
      "location": "http://localhost:80",
      "subcomponent": "Content Preview Renderer (ext:backend)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.39 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-006",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-006",
      "location": "http://localhost:80",
      "subcomponent": "Session Storage (ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.39 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Sensitive Data Exposure found",
    "hostname": "localhost",
    "name": "Sensitive Data Exposure",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-003",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-003",
      "location": "http://localhost:80",
      "subcomponent": "Form Framework (ext:form)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.39 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Broken Access Control found",
    "hostname": "localhost",
    "name": "Broken Access Control",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-002",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-002",
      "location": "http://localhost:80",
      "subcomponent": "Form Framework (ext:form)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.39 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Unrestricted File Upload found",
    "hostname": "localhost",
    "name": "Unrestricted File Upload",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-001",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-001",
      "location": "http://localhost:80",
      "subcomponent": "Login Handling (ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.39 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Open Redirection found",
    "hostname": "localhost",
    "name": "Open Redirection",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-013",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-013",
      "location": "http://localhost:80",
      "subcomponent": "Content Rendering, HTML Parser (ext:frontend, ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.41 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site-Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site-Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-012",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-012",
      "location": "http://localhost:80",
      "subcomponent": "User Authentication (ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.40 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Information Disclosure found",
    "hostname": "localhost",
    "name": "Information Disclosure",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-011",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-011",
      "location": "http://localhost:80",
      "subcomponent": "Backend Grid View (ext:backend)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.40 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-010",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-010",
      "location": "http://localhost:80",
      "subcomponent": "Query Generator & Query View (ext:lowlevel, ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.40 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "extension_Version": "unknown",
      "location": "http://localhost:80/typo3/sysext/extbase/",
      "repository": "https://extensions.typo3.org/extension/extbase",
      "typo3_version": "8.7",
      "version_file": "not found",
      "vulnerabilities": Array [],
    },
    "category": "Extension",
    "description": "Extension extbase (Log4Php) found",
    "hostname": "localhost",
    "name": "extbase",
    "osi_layer": "APPLICATION",
    "severity": "INFORMATIONAL",
  },
  Object {
    "attributes": Object {
      "extension_Version": "unknown",
      "location": "http://localhost:80/typo3/sysext/feedit/",
      "repository": "https://extensions.typo3.org/extension/feedit",
      "typo3_version": "8.7",
      "version_file": "not found",
      "vulnerabilities": Array [],
    },
    "category": "Extension",
    "description": "Extension feedit (Frontend Editing) found",
    "hostname": "localhost",
    "name": "feedit",
    "osi_layer": "APPLICATION",
    "severity": "INFORMATIONAL",
  },
  Object {
    "attributes": Object {
      "extension_Version": "unknown",
      "location": "http://localhost:80/typo3/sysext/func/",
      "repository": "https://extensions.typo3.org/extension/func",
      "typo3_version": "8.7",
      "version_file": "not found",
      "vulnerabilities": Array [],
    },
    "category": "Extension",
    "description": "Extension func (WebFunc) found",
    "hostname": "localhost",
    "name": "func",
    "osi_layer": "APPLICATION",
    "severity": "INFORMATIONAL",
  },
  Object {
    "attributes": Object {
      "extension_Version": "unknown",
      "location": "http://localhost:80/typo3/sysext/rsaauth/",
      "repository": "https://extensions.typo3.org/extension/rsaauth",
      "typo3_version": "8.7",
      "version_file": "not found",
      "vulnerabilities": Array [],
    },
    "category": "Extension",
    "description": "Extension rsaauth (RSA authentication for TYPO3) found",
    "hostname": "localhost",
    "name": "rsaauth",
    "osi_layer": "APPLICATION",
    "severity": "INFORMATIONAL",
  },
  Object {
    "attributes": Object {
      "extension_Version": "unknown",
      "location": "http://localhost:80/typo3/sysext/sys_action/",
      "repository": "https://extensions.typo3.org/extension/sys_action",
      "typo3_version": "8.7",
      "version_file": "not found",
      "vulnerabilities": Array [],
    },
    "category": "Extension",
    "description": "Extension sys_action (UserTask Center, Actions) found",
    "hostname": "localhost",
    "name": "sys_action",
    "osi_layer": "APPLICATION",
    "severity": "INFORMATIONAL",
  },
  Object {
    "attributes": Object {
      "extension_Version": "unknown",
      "location": "http://localhost:80/typo3/sysext/taskcenter/",
      "repository": "https://extensions.typo3.org/extension/taskcenter",
      "typo3_version": "8.7",
      "version_file": "not found",
      "vulnerabilities": Array [],
    },
    "category": "Extension",
    "description": "Extension taskcenter (UserTask Center) found",
    "hostname": "localhost",
    "name": "taskcenter",
    "osi_layer": "APPLICATION",
    "severity": "INFORMATIONAL",
  },
  Object {
    "attributes": Object {
      "extension_Version": "unknown",
      "location": "http://localhost:80/typo3/sysext/tstemplate/",
      "repository": "https://extensions.typo3.org/extension/tstemplate",
      "typo3_version": "8.7",
      "version_file": "not found",
      "vulnerabilities": Array [
        Object {
          "Current": "stable",
          "Name": "news",
          "Repo": "https://extensions.typo3.org/extension/news",
          "Title": "News system",
          "Url": "http://localhost:80/typo3/sysext/news/",
          "Version": "3.1.0",
          "Version File": "http://localhost:80/typo3conf/ext/news/Documentation/Settings.yml",
          "Vulnerabilities": Array [
            Object {
              "Advisory": "TYPO3-EXT-SA-2017-001",
              "Affected": "3.2.6 - 0.0.0",
              "Vulnerability Type": "SQL Injection",
            },
            Object {
              "Advisory": "TYPO3-EXT-SA-2015-017",
              "Affected": "3.2.1 - 0.0.0",
              "Vulnerability Type": "Cross-Site Scripting",
            },
          ],
        },
      ],
    },
    "category": "Extension",
    "description": "Extension tstemplate (WebTemplate) found",
    "hostname": "localhost",
    "name": "tstemplate",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
]
`;

exports[`parser parses large json result without vulnerable extensions successfully 1`] = `
Array [
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-026",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-026",
      "location": "http://localhost:80",
      "subcomponent": "Query Generator & Query View (ext:lowlevel, ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.29 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Insecure Deserialization found",
    "hostname": "localhost",
    "name": "Insecure Deserialization",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-025",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-025",
      "location": "http://localhost:80",
      "subcomponent": "Query Generator (ext:lowlevel)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.29 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type SQL Injection found",
    "hostname": "localhost",
    "name": "SQL Injection",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-024",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-024",
      "location": "http://localhost:80",
      "subcomponent": "Extension Manager (ext:extensionmanger)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.29 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Directory Traversal found",
    "hostname": "localhost",
    "name": "Directory Traversal",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-023",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-023",
      "location": "http://localhost:80",
      "subcomponent": "Filelist Module (ext:filelist)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.29 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-022",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-022",
      "location": "http://localhost:80",
      "subcomponent": "Link Handling (ext:core, ext:frontend)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.29 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-021",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-021",
      "location": "http://localhost:80",
      "subcomponent": "Form Framework (ext:form)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.29 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-020",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-020",
      "location": "http://localhost:80",
      "subcomponent": "Backend & Core API (ext:backend, ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.26 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Insecure Deserialization found",
    "hostname": "localhost",
    "name": "Insecure Deserialization",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-019",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-019",
      "location": "http://localhost:80",
      "subcomponent": "Backend API (ext:backend)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.26 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Arbitrary Code Execution, Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Arbitrary Code Execution, Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-018",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-018",
      "location": "http://localhost:80",
      "subcomponent": "Frontend Session Handling (ext:frontend)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.26 - 8.5.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Security Misconfiguration found",
    "hostname": "localhost",
    "name": "Security Misconfiguration",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-015",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-015",
      "location": "http://localhost:80",
      "subcomponent": "Link Handling (ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.26 - 8.3.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-014",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-014",
      "location": "http://localhost:80",
      "subcomponent": "Backend User Interface (ext:backend)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.26 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Information Disclosure found",
    "hostname": "localhost",
    "name": "Information Disclosure",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-013",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-013",
      "location": "http://localhost:80",
      "subcomponent": "Fluid Engine (package typo3fluid/fluid)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.24 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-012",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-012",
      "location": "http://localhost:80",
      "subcomponent": "Image Processing via ImageMagick (ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.24 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Arbitrary Code Execution found",
    "hostname": "localhost",
    "name": "Arbitrary Code Execution",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-011",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-011",
      "location": "http://localhost:80",
      "subcomponent": "User Session Handling (ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.24 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Security Misconfiguration found",
    "hostname": "localhost",
    "name": "Security Misconfiguration",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-008",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-008",
      "location": "http://localhost:80",
      "subcomponent": "File List (ext:filelist)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.22 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Arbitrary Code Execution found",
    "hostname": "localhost",
    "name": "Arbitrary Code Execution",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-007",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-007",
      "location": "http://localhost:80",
      "subcomponent": "Form Framework (ext:form)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.22 - 8.5.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-006",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-006",
      "location": "http://localhost:80",
      "subcomponent": "3rd party library Bootstrap CSS toolkit",
      "typo3_version": "8.7",
      "versions_affected": "8.7.22 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-005",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-005",
      "location": "http://localhost:80",
      "subcomponent": "Fluid (ext:fluid)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.22 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-003",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-003",
      "location": "http://localhost:80",
      "subcomponent": "Localization Handling",
      "typo3_version": "8.7",
      "versions_affected": "8.7.22 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Broken Access Control found",
    "hostname": "localhost",
    "name": "Broken Access Control",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-002",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-002",
      "location": "http://localhost:80",
      "subcomponent": "Backend User Account Model (ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.22 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Security Misconfiguration found",
    "hostname": "localhost",
    "name": "Security Misconfiguration",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2019-001",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2019-001",
      "location": "http://localhost:80",
      "subcomponent": "RequireJS package configuration",
      "typo3_version": "8.7",
      "versions_affected": "8.7.22 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Information Disclosure found",
    "hostname": "localhost",
    "name": "Information Disclosure",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-012",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-012",
      "location": "http://localhost:80",
      "subcomponent": "Frontend Session Handling",
      "typo3_version": "8.7",
      "versions_affected": "8.7.20 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Denial of Service found",
    "hostname": "localhost",
    "name": "Denial of Service",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-011",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-011",
      "location": "http://localhost:80",
      "subcomponent": "Online media asset handling",
      "typo3_version": "8.7",
      "versions_affected": "8.7.20 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Denial of Service found",
    "hostname": "localhost",
    "name": "Denial of Service",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-010",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-010",
      "location": "http://localhost:80",
      "subcomponent": "Install Tool",
      "typo3_version": "8.7",
      "versions_affected": "8.7.20 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Information Disclosure found",
    "hostname": "localhost",
    "name": "Information Disclosure",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-009",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-009",
      "location": "http://localhost:80",
      "subcomponent": "Install Tool Session Handling",
      "typo3_version": "8.7",
      "versions_affected": "8.7.20 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Security Misconfiguration found",
    "hostname": "localhost",
    "name": "Security Misconfiguration",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-008",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-008",
      "location": "http://localhost:80",
      "subcomponent": "Frontend user login",
      "typo3_version": "8.7",
      "versions_affected": "8.7.20 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-007",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-007",
      "location": "http://localhost:80",
      "subcomponent": "Backend modal component",
      "typo3_version": "8.7",
      "versions_affected": "8.7.20 - 8.5.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-006",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-006",
      "location": "http://localhost:80",
      "subcomponent": "Online media asset rendering",
      "typo3_version": "8.7",
      "versions_affected": "8.7.20 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-005",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-005",
      "location": "http://localhost:80",
      "subcomponent": "3rd party JavaScript library CKEditor",
      "typo3_version": "8.7",
      "versions_affected": "8.7.20 - 8.5.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-004",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-004",
      "location": "http://localhost:80",
      "subcomponent": "Form Framework (ext:form)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.16 - 8.5.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Insecure Deserialization found",
    "hostname": "localhost",
    "name": "Insecure Deserialization",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-003",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-003",
      "location": "http://localhost:80",
      "subcomponent": "Form Framework (ext:form)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.16 - 8.5.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Privilege Escalation & SQL Injection found",
    "hostname": "localhost",
    "name": "Privilege Escalation & SQL Injection",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-002",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-002",
      "location": "http://localhost:80",
      "subcomponent": "TYPO3 CMS",
      "typo3_version": "8.7",
      "versions_affected": "8.7.16 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Insecure Deserialization & Arbitrary Code Execution found",
    "hostname": "localhost",
    "name": "Insecure Deserialization & Arbitrary Code Execution",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2018-001",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2018-001",
      "location": "http://localhost:80",
      "subcomponent": "Salted Passwords (ext:saltedpasswords)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.16 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Authentication Bypass found",
    "hostname": "localhost",
    "name": "Authentication Bypass",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2017-007",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2017-007",
      "location": "http://localhost:80",
      "subcomponent": "TYPO3 CMS",
      "typo3_version": "8.7",
      "versions_affected": "8.7.4 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Arbitrary Code Execution found",
    "hostname": "localhost",
    "name": "Arbitrary Code Execution",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2017-005",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2017-005",
      "location": "http://localhost:80",
      "subcomponent": "TYPO3 CMS",
      "typo3_version": "8.7",
      "versions_affected": "8.7.4 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Information Disclosure found",
    "hostname": "localhost",
    "name": "Information Disclosure",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2017-006",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2017-006",
      "location": "http://localhost:80",
      "subcomponent": "TYPO3 CMS",
      "typo3_version": "8.7",
      "versions_affected": "8.7.4 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Information Disclosure found",
    "hostname": "localhost",
    "name": "Information Disclosure",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2017-004",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2017-004",
      "location": "http://localhost:80",
      "subcomponent": "TYPO3 CMS",
      "typo3_version": "8.7",
      "versions_affected": "8.7.4 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2020-011",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2020-011",
      "location": "http://localhost:80",
      "subcomponent": "Session Storage (ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.37 - 8.7.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Sensitive Data Exposure found",
    "hostname": "localhost",
    "name": "Sensitive Data Exposure",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2020-010",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2020-010",
      "location": "http://localhost:80",
      "subcomponent": "Fluid (ext:fluid)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.37 - 8.7.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2020-009",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2020-009",
      "location": "http://localhost:80",
      "subcomponent": "Fluid Engine (package typo3fluid/fluid)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.37 - 8.7.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-008",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-008",
      "location": "http://localhost:80",
      "subcomponent": "Content Preview Renderer (ext:backend)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.39 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-006",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-006",
      "location": "http://localhost:80",
      "subcomponent": "Session Storage (ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.39 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Sensitive Data Exposure found",
    "hostname": "localhost",
    "name": "Sensitive Data Exposure",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-003",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-003",
      "location": "http://localhost:80",
      "subcomponent": "Form Framework (ext:form)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.39 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Broken Access Control found",
    "hostname": "localhost",
    "name": "Broken Access Control",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-002",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-002",
      "location": "http://localhost:80",
      "subcomponent": "Form Framework (ext:form)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.39 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Unrestricted File Upload found",
    "hostname": "localhost",
    "name": "Unrestricted File Upload",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-001",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-001",
      "location": "http://localhost:80",
      "subcomponent": "Login Handling (ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.39 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Open Redirection found",
    "hostname": "localhost",
    "name": "Open Redirection",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-013",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-013",
      "location": "http://localhost:80",
      "subcomponent": "Content Rendering, HTML Parser (ext:frontend, ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.41 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site-Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site-Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-012",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-012",
      "location": "http://localhost:80",
      "subcomponent": "User Authentication (ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.40 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Information Disclosure found",
    "hostname": "localhost",
    "name": "Information Disclosure",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-011",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-011",
      "location": "http://localhost:80",
      "subcomponent": "Backend Grid View (ext:backend)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.40 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "advisory": "TYPO3-CORE-SA-2021-010",
      "advisory_url": "https://typo3.org/security/advisory/typo3-core-sa-2021-010",
      "location": "http://localhost:80",
      "subcomponent": "Query Generator & Query View (ext:lowlevel, ext:core)",
      "typo3_version": "8.7",
      "versions_affected": "8.7.40 - 8.0.0",
    },
    "category": "Vulnerability",
    "description": "Vulnerability of type Cross-Site Scripting found",
    "hostname": "localhost",
    "name": "Cross-Site Scripting",
    "osi_layer": "APPLICATION",
    "severity": "HIGH",
  },
  Object {
    "attributes": Object {
      "extension_Version": "unknown",
      "location": "http://localhost:80/typo3/sysext/extbase/",
      "repository": "https://extensions.typo3.org/extension/extbase",
      "typo3_version": "8.7",
      "version_file": "not found",
      "vulnerabilities": Array [],
    },
    "category": "Extension",
    "description": "Extension extbase (Log4Php) found",
    "hostname": "localhost",
    "name": "extbase",
    "osi_layer": "APPLICATION",
    "severity": "INFORMATIONAL",
  },
  Object {
    "attributes": Object {
      "extension_Version": "unknown",
      "location": "http://localhost:80/typo3/sysext/feedit/",
      "repository": "https://extensions.typo3.org/extension/feedit",
      "typo3_version": "8.7",
      "version_file": "not found",
      "vulnerabilities": Array [],
    },
    "category": "Extension",
    "description": "Extension feedit (Frontend Editing) found",
    "hostname": "localhost",
    "name": "feedit",
    "osi_layer": "APPLICATION",
    "severity": "INFORMATIONAL",
  },
  Object {
    "attributes": Object {
      "extension_Version": "unknown",
      "location": "http://localhost:80/typo3/sysext/func/",
      "repository": "https://extensions.typo3.org/extension/func",
      "typo3_version": "8.7",
      "version_file": "not found",
      "vulnerabilities": Array [],
    },
    "category": "Extension",
    "description": "Extension func (WebFunc) found",
    "hostname": "localhost",
    "name": "func",
    "osi_layer": "APPLICATION",
    "severity": "INFORMATIONAL",
  },
  Object {
    "attributes": Object {
      "extension_Version": "unknown",
      "location": "http://localhost:80/typo3/sysext/rsaauth/",
      "repository": "https://extensions.typo3.org/extension/rsaauth",
      "typo3_version": "8.7",
      "version_file": "not found",
      "vulnerabilities": Array [],
    },
    "category": "Extension",
    "description": "Extension rsaauth (RSA authentication for TYPO3) found",
    "hostname": "localhost",
    "name": "rsaauth",
    "osi_layer": "APPLICATION",
    "severity": "INFORMATIONAL",
  },
  Object {
    "attributes": Object {
      "extension_Version": "unknown",
      "location": "http://localhost:80/typo3/sysext/sys_action/",
      "repository": "https://extensions.typo3.org/extension/sys_action",
      "typo3_version": "8.7",
      "version_file": "not found",
      "vulnerabilities": Array [],
    },
    "category": "Extension",
    "description": "Extension sys_action (UserTask Center, Actions) found",
    "hostname": "localhost",
    "name": "sys_action",
    "osi_layer": "APPLICATION",
    "severity": "INFORMATIONAL",
  },
  Object {
    "attributes": Object {
      "extension_Version": "unknown",
      "location": "http://localhost:80/typo3/sysext/taskcenter/",
      "repository": "https://extensions.typo3.org/extension/taskcenter",
      "typo3_version": "8.7",
      "version_file": "not found",
      "vulnerabilities": Array [],
    },
    "category": "Extension",
    "description": "Extension taskcenter (UserTask Center) found",
    "hostname": "localhost",
    "name": "taskcenter",
    "osi_layer": "APPLICATION",
    "severity": "INFORMATIONAL",
  },
  Object {
    "attributes": Object {
      "extension_Version": "unknown",
      "location": "http://localhost:80/typo3/sysext/tstemplate/",
      "repository": "https://extensions.typo3.org/extension/tstemplate",
      "typo3_version": "8.7",
      "version_file": "not found",
      "vulnerabilities": Array [],
    },
    "category": "Extension",
    "description": "Extension tstemplate (WebTemplate) found",
    "hostname": "localhost",
    "name": "tstemplate",
    "osi_layer": "APPLICATION",
    "severity": "INFORMATIONAL",
  },
]
`;
